--- a/css/style.css
+++ b/css/style.css
@@ -1385,7 +1385,7 @@ main{
     border-radius: 5px;
     margin-bottom: 25px;
     font-size: 18px;
-    padding-left: 20px;
+    padding: 20px;
     border: 3px solid #FEE9EF;
 }
 .contact-form input::placeholder{
