--- a/css/responsive.css
+++ b/css/responsive.css
@@ -193,7 +193,7 @@
         font-size: 14px;;
     }
     .copyright p{
-        text-aling:center;
+        text-align: center;
     }
     .banner-wrap .container{
         padding: 0;
@@ -250,8 +250,8 @@
         width: 100%;
     }
     .social-media{
-        margin:auto;
-        width:140px;
+        margin: auto;
+        width: 140px;
     }
     
     
